--- a/demo1_css/stylesheet/styles.less
+++ b/demo1_css/stylesheet/styles.less
@@ -1,7 +1,238 @@
-div{
-    background: #F00;
-    border-radius: 20px 20px 0px 0px;
-    border-color: green;
-    border-width: 3px;
-    margin: 30px;
+body {
+    max-width: 690px;
+    margin: auto;
+}
+
+.a {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    align-items: center;
+}
+
+.b {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.dv_1 {
+    margin-top: 30px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 30px 0px rgba(16, 25, 41, 0.14);
+    border-radius: 24px;
+    display: flex;
+    flex-direction: column;
+
+    .row_1 {
+        .a();
+        margin-top: 45px;
+        margin-left: 30px;
+
+        .tg_1 {
+            width: 40px;
+            height: 40px;
+            background: #FF901B;
+            border-radius: 10px;
+            text-align: center;
+            font-size: 28px;
+            font-family: PingFangSC-Medium, PingFang SC;
+            font-weight: 500;
+            color: #FFFFFF;
+            line-height: 40px;
+            margin-right: 16px;
+        }
+
+        .txt_1 {
+            width: 144px;
+            height: 50px;
+            font-size: 36px;
+            font-family: PingFangSC-Medium, PingFang SC;
+            font-weight: 500;
+            color: #333333;
+            line-height: 50px;
+        }
+
+        .txt_2 {
+            margin-left: -3px;
+            width: 160px;
+            height: 45px;
+            font-size: 32px;
+            font-family: PingFangSC-Medium, PingFang SC;
+            font-weight: 500;
+            color: #909090;
+            line-height: 45px;
+        }
+    }
+
+    .img_1 {
+        margin: 30px 32px 0px 30px;
+    }
+}
+
+
+.family_1 {
+    margin-left: 30px;
+    margin-right: 30px;
+    height: 151px;
+    .a();
+    justify-content: space-between;
+    border-bottom: 1px solid #E6E6E6;
+
+    .user_info {
+        .a();
+
+        .head_1 {
+            width: 80px;
+        }
+
+        .name_tag_remark {
+            display: flex;
+            flex-direction: column;
+            position: relative;
+            margin-left: 16px;
+
+            .name_tag {
+                display: flex;
+                flex-direction: row;
+                position: relative;
+                align-items: center;
+
+                .name_1 {
+                    width: 81px;
+                    height: 45px;
+                    font-size: 32px;
+                    font-family: PingFangSC-Medium, PingFang SC;
+                    font-weight: 500;
+                    color: #1B1B1B;
+                    // line-height: 45px;
+                }
+
+                .tg_2 {
+                    margin-left: 16px;
+                    height: 36px;
+                    padding: 0 12px;
+                    background: #FFF3E6;
+                    border-radius: 20px;
+                    font-size: 22px;
+                    font-family: PingFangSC-Regular, PingFang SC;
+                    font-weight: 400;
+                    color: #FF901B;
+                    line-height: 35px;
+                }
+            }
+
+            .remark_1 {
+                height: 33px;
+                font-size: 24px;
+                font-family: PingFangSC-Regular, PingFang SC;
+                font-weight: 400;
+                color: #939393;
+                line-height: 33px;
+            }
+        }
+    }
+
+    .img_2 {
+        width: 36px;
+    }
+
+}
+
+.family_1:last-of-type {
+    border-bottom: none;
+}
+
+.row_2 {
+    .b();
+    margin-top: 32px;
+    margin-left: 30px;
+    margin-right: 30px;
+
+    .pay_1 {
+        position:relative;
+        width: 307px;
+        height: 100px;
+        background: #FFF6EC;
+        border-radius: 8px;
+        border: 2px solid #FF901B;
+        .corner_1 {
+            position:absolute; 
+            margin:0px;
+            width: 30px;
+        }
+        .txt_3{
+            display: flex;
+            padding: 10px;
+            justify-content: center; 
+            font-size: 26px;
+            font-family: PingFangSC-Regular, PingFang SC;
+            font-weight: 400;
+            color: #FF901B;
+            line-height: 37px;
+        }
+
+
+    }
+    .pay_2{
+        width: 307px;
+        height: 100px;
+        background: #FFFFFF;
+        border-radius: 8px;
+        border: 2px solid #BCBCBC;
+
+        font-size: 28px;
+        font-family: PingFangSC-Medium, PingFang SC;
+        font-weight: 500;
+        color: #909090;
+        line-height: 100px;
+        text-align: center
+    }
+}
+
+.row_3{
+    margin-left: 30px;
+    margin-top: 9px;
+    margin-right: 30px;
+    height: 101px;
+    .a();
+    justify-content: space-between;
+    border-bottom: #E6E6E6 solid 1px;
+
+    .pay_3{
+        font-size: 30px;
+        font-family: PingFangSC-Medium, PingFang SC;
+        font-weight: 500;
+        color: #333333;
+        line-height: 42px;
+    }
+    .pay_4{
+        .a();
+        font-size: 28px;
+        font-family: PingFangSC-Regular, PingFang SC;
+        font-weight: 400;
+        color: #464646;
+        line-height: 40px;
+
+        .wx_1{
+            width: 40px;
+        }
+        .array_1{
+            font-size: 30px;
+            color:#BCBCBC
+        }
+    }
+}
+.txt_4{
+    margin-left: 30px;
+    margin-top: 9px;
+    margin-right: 30px;
+    .a();
+    font-size: 24px;
+    font-family: PingFangSC-Regular, PingFang SC;
+    font-weight: 400;
+    color: #939393;
+    line-height: 33px;
 }
